# codex-supervisor

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CONTRACTS.md  DECISIONS.md  HANDOFF.md  PLANS.md  README.md  ROADMAP.md  SOP.md  TESTING.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: README.md
insights/: README.md  bootstrap-historical-afk-worker-result.json  bootstrap-landmine-audit.md  bootstrap-landmine-worker-result.json  codex-usage-skill-synthesis.md  cross-platform-ci.md  generic-work-envelope-2026-05-29.md  goal-mode-and-ralph-loop.md  graph.md  live-smoke-lessons.md  open-questions.md  project-sop.md  release-readiness-evidence.md  simplification-lessons-2026-05-28.md  skill-learning-loop.md  source-index.md  stage10a-codex-state-inventory-worker-result.json  stage10b-codex-state-observations-worker-result.json  stage10c-codex-state-reconciliation-dry-run-worker-result.json  stage10d-codex-state-reconciliation-apply-worker-result.json  stage10e-codex-automation-bridge-dry-run-worker-result.json  stage10f-official-automation-bridge-apply-worker-result.json  stage3a-project-registry-generic-adapter-worker-result.json  stage3b-adapter-task-candidates-worker-result.json  stage3c-project-task-seeding-worker-result.json  stage3d-planning-sqlite-adapter-worker-result.json  stage3e-markdown-plan-adapter-worker-result.json  stage3f-harness-config-adapter-worker-result.json  stage6-codex-exec-backend-design-worker-result.json  stage6a-backend-protocol-worker-result.json  stage6b-codex-exec-preflight-worker-result.json  stage6c-codex-exec-launch-worker-result.json  stage7a-worktree-layout-worker-result.json  stage7b-worker-launch-preparation-worker-result.json  stage7c-worker-orchestration-worker-result.json  stage7d-worktree-state-worker-result.json  stage7e-cleanup-orphan-planning-worker-result.json  stage7f-cleanup-plan-cli-worker-result.json  stage8a-review-contracts-worker-result.json  stage8b-review-result-payloads-worker-result.json  (+10 more)
plans/: planning.sqlite3
scripts/: check_file_justification.py  check_planning_integrity.py  check_protected_files.py  check_public_repo_hygiene.py  check_skill_inventory.py  check_source_inventory.py  print_protected_hashes.py  verify.py  verify_codex_plugin_install.py
sources/: README.md
tests/: planning_db_factory.py  test_adapter_contracts.py  test_attempt_store.py  test_attempts.py  test_cli_small_interface.py  test_codex_automation.py  test_codex_plugin.py  test_codex_state.py  test_codex_state_reconciliation.py  test_evidence_vocabulary.py  test_execution_surface.py  test_factory_demo.py  test_factory_smoke.py  test_file_justification.py  test_github_ci.py  test_github_lifecycle.py  test_goal_contracts.py  test_insight_cli.py  test_insight_updates.py  test_insights.py  test_locks.py  test_mcp_queue_next.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_stdio_e2e.py  test_operation_registry.py  test_planning.py  test_planning_integrity.py  test_planning_integrity_attempts.py  test_policy.py  test_process_attempt_e2e.py  test_projects.py  test_public_repo_hygiene.py  test_queue_selection.py  test_release_readiness.py  test_review_cli.py  test_review_loop.py  test_review_persistence.py  test_review_repairs.py  test_runtime_preflight.py  (+19 more)
worker-results/: bootstrap-historical-afk-worker-result.json  bootstrap-landmine-worker-result.json  stage10a-codex-state-inventory-worker-result.json  stage10b-codex-state-observations-worker-result.json  stage10c-codex-state-reconciliation-dry-run-worker-result.json  stage10d-codex-state-reconciliation-apply-worker-result.json  stage10e-codex-automation-bridge-dry-run-worker-result.json  stage10f-official-automation-bridge-apply-worker-result.json  stage11a-mcp-readonly-tools-worker-result.json  stage3a-project-registry-generic-adapter-worker-result.json  (+25 more)
(+117 files in other folders)
