[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "codex-supervisor"
version = "0.1.1"
description = "A Codex-native supervisor for agentic engineering factories."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Adam Owada" }]
keywords = ["agentic-coding", "codex", "sqlite", "skills", "worktrees"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Repository = "https://github.com/adamowada/codex-supervisor"
Issues = "https://github.com/adamowada/codex-supervisor/issues"

[project.scripts]
codex-supervisor = "codex_supervisor.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.9",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_return_any = true
